--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-          	  <a class="navbar-brand" href=""><img alt="CurioByte's Logo" src="/assets/img/CurioByte_logo.png" /></a>
+          	  <a class="navbar-brand" href=""><img alt="CurioByte's Logo" src="CurioByte_logo.png" /></a>
             </div>
           </div>
 
@@ -154,19 +154,19 @@
 		
 	  <div class="carousel-inner" role="listbox">
 			<div class="active item">
-				<a target="_self" href=""><img src="/assets/img/CurioWeb-AJS.jpg"/></a>
+				<a target="_self" href=""><img src="CurioWeb-AJS.jpg"/></a>
 				<div class="carousel-caption"></div>
 			</div>
 			<div class="item">
-				<a target="_self" href=""><img src="/assets/img/CurioWeb-AJS.jpg"/></a>
+				<a target="_self" href=""><img src="CurioWeb-AJS.jpg"/></a>
 				<div class="carousel-caption"></div>
 			</div>
 			<div class="item">
-				<a target="_self" href=""><img src="/assets/img/CurioWeb-AJS.jpg"/></a>
+				<a target="_self" href=""><img src="CurioWeb-AJS.jpg"/></a>
 				<div class="carousel-caption"></div>
 			</div>
 			<div class="item">
-				<a target="_self" href=""><img src="/assets/img/CurioWeb-AJS.jpg"/></a>
+				<a target="_self" href=""><img src="CurioWeb-AJS.jpg"/></a>
 				<div class="carousel-caption"></div>
 			</div>
 	  </div>
@@ -191,7 +191,7 @@
 				<div class="align-center">
 					<!--<p class='twenty-margin-bottom'>CurioByte는 호기심에서 출발한 아이디어와 생각을 Technology라는 도구를 활용하여 구현하는 새로운 교육을 위해 2015년 시작되었습니다. 코딩을 배우는 것이 아닌 코딩과 기술을 도구로 스스로 생각하고 문제를 해결하며 computer와 technology라는 도구로서 가능한 새로운 Creativity를 발견하는 것이 CurioByte가 추구하는 교육의 목표입니다. 모든 워크샵은 CurioByte만의 자체 제작 프로그램과 최신 교구를 적극 활용하여 운영됩니다. 코딩만을 배우는 것이 아닌 다각적인 접근으로 새로운 분야로의 도전을 경험하는 진정한 프로젝트 워크샵을 경험하시기 바랍니다. </p>
 					-->
-					<img class="img-center" src="/assets/img/CBProgram.png">
+					<img class="img-center" src="CBProgram.png">
 					</div>
 			</div>
 		</div>
